# PythonTasks

./: .gitignore  README.md  pyproject.toml
O_notation/: decor_benchmark.py
solutions/: 1st_sorting.py  barge.py  byuing_house.py  car.py  ceasar_code.py  collatz_algo.py  demo.py  double_list.py  isomorphic.py  long_without_repeating.py  longest_prefix.py  longest_substring.py  luna_algo.py  majority_num.py  money.py  rle.py  second_sorting.py  single_number.py  third_sorting.py  threesums.py  valid_parenthesis.py
tasks/02_cycle/: 0x_tb_3x_plus_1.md
tasks/03_sort/: 01_task_sort.py
tasks/07_OOP/: 05_Money_task.md
tasks/07_OOP/01_Car/: task.md
tasks/07_OOP/02_buying_house/: result.py  task.md
tasks/07_OOP/04_Barge/: result.py  task.md
tests/: README.md  test_2nd_sorting.py  test_3x_plus_1.py  test_barge.py  test_buying_house.py  test_car.py  test_ceasar_code.py  test_long_without_repeating.py  test_luna_algo.py  test_money.py  test_rle.py  test_solution_demo.py
